--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "require": {
         "php": ">=5.3",
-        "cocur/slugify": "1.*"
+        "cocur/slugify": "^1.0|^2.0|^3.0|^4.0"
     },
     "autoload": {
         "psr-0": {
